[package]
name = "hyper-tls"
version = "0.2.1"
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"

[dependencies]
bytes = "0.4"
futures = "0.1.21"
native-tls = "0.1"
hyper = { git = "https://github.com/redox-os/hyper" }
tokio-io = { git = "https://github.com/redox-os/tokio" }
tokio-tls = { git = "https://github.com/redox-os/tokio-tls", default-features = false }

[dev-dependencies]
tokio = { git = "https://github.com/redox-os/tokio" }
